# premiumcalc

./: Cargo.toml  DATASETS.md  LICENSE  QUICKSTART.md  README.md  applicants.csv  switch_to_large.ps1  switch_to_small.ps1
.github/workflows/: ci.yml
src/: main.rs
src/application/: mod.rs
src/domain/: mod.rs
src/repository/: applicant_repository.rs  formula_repository.rs  mod.rs
src/services/: mod.rs  premium_calculator.rs
src/ui/: app_state.rs  mod.rs  renderer.rs  ui_renderer.rs
