[package]
name = "premiumcalc"
version = "0.1.0"
edition = "2021"
default-run = "premiumcalc"

[[bin]]
name = "premiumcalc"
path = "src/main.rs"

[[bin]]
name = "generate_data"
path = "src/bin/generate_data.rs"

[dependencies]
formcalc = { path = "../formcalc" }
ratatui = "0.29"
crossterm = "0.28"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
rand = "0.8"
